# remora

./: .ast_summary_events.jsonl  .gitignore  AGENT_DEMO_INTEGRATION_GUIDE.md  AGENT_NODE_CONCEPT.md  AGENT_NODE_REFACTOR_GUIDE.md  AST_MOMENTUM_BRAINSTORMING.md  AST_MOMENTUM_MVP_IDEATION.md  AST_MOMENTUM_MVP_PLAN.md  AST_SUMMARY_MVP_IDEATION.md  AST_SUMMARY_PLAN.md  BLUE_SKY_REFACTORING_IDEAS.md  BLUE_SKY_V2_REWRITE_GUIDE.md  CAIRN_CONCURRENCY_RECOMMENDATIONS.md  CAIRN_INTEGRATION_REFACTOR.md  CAIRN_INTEGRATION_REPORT.md  CAIRN_INTEGRATION_REVIEW.md  CAIRN_INTEGRATION_TEST_SUITE_REFACTOR.md  CODE_REVIEW.md  CODE_REVIEW_REFACTOR_GUIDE.md  CONCEPT.md  CONCURRENT_REFACTOR_OVERVIEW.md  CONTRIBUTING.md  DASHBOARD_REFACTOR_GUIDE.md  DEMO_COMPLETION_GUIDE.md  DEMO_EVALUATION_REVIEW.md  DEMO_IMPLEMENTATION_GUIDE.md  DEMO_PLAN.md  DEVELOPMENT_REMAINING.md  ERROR_ANALYSIS.md  FINAL_FIX_REFACTOR.md  FINAL_UPDATES.md  FUTURE_ENHANCEMENTS.md  GRAIL_RUNTIME_TESTING_REFACTOR.md  GRAIL_SCRIPT_REFACTOR.md  GRAIL_TEST_FIX_REPORT_2.md  GROUND_UP_REFACTOR_GUIDE-STEP_06.md  GROUND_UP_REFACTOR_GUIDE-STEP_07.md  GROUND_UP_REFACTOR_GUIDE-STEP_08.md  GROUND_UP_REFACTOR_GUIDE-STEP_10.md  GROUND_UP_REFACTOR_GUIDE-STEP_13.md  (+84 more)
.context/: CODEBASE_ANALYSIS.md  GRAIL_ANALYSIS.md  GROUND_UP_REFACTOR_GUIDE-STEP_01.md  GROUND_UP_REFACTOR_GUIDE-STEP_05.md  GROUND_UP_REFACTOR_IDEAS.md  NEOVIM_DEMO_V22_REFACTORING_GUIDE.md  STRUCTURED_AGENTS_CODEBASE_ANALYSIS.md  analysis_notes.md
.refactor/: GROUND_UP_REFACTOR_GUIDE-STEP_01.md  GROUND_UP_REFACTOR_GUIDE-STEP_02.md  GROUND_UP_REFACTOR_GUIDE-STEP_03.md  GROUND_UP_REFACTOR_GUIDE-STEP_04.md  GROUND_UP_REFACTOR_GUIDE-STEP_05.md  GROUND_UP_REFACTOR_GUIDE-STEP_06.md  GROUND_UP_REFACTOR_GUIDE-STEP_07.md  GROUND_UP_REFACTOR_GUIDE-STEP_08.md  GROUND_UP_REFACTOR_GUIDE-STEP_09.md  GROUND_UP_REFACTOR_GUIDE-STEP_10.md  GROUND_UP_REFACTOR_GUIDE-STEP_11.md  GROUND_UP_REFACTOR_GUIDE-STEP_12.md  GROUND_UP_REFACTOR_GUIDE-STEP_13.md  GROUND_UP_REFACTOR_GUIDE-STEP_14.md  GROUND_UP_REFACTOR_GUIDE-STEP_15.md  SIMPLIFICATION_REWRITE-PHASE_1.md  SIMPLIFICATION_REWRITE-PHASE_2.md  SIMPLIFICATION_REWRITE-PHASE_3.md  SIMPLIFICATION_REWRITE-PHASE_4.md  SIMPLIFICATION_REWRITE-PHASE_5.md  SIMPLIFICATION_REWRITE-PHASE_6.md  SIMPLIFICATION_REWRITE-PHASE_7.md  SIMPLIFICATION_REWRITE-PHASE_8.md
.remora/: hub.db-wal  indexer.db
.roadmap/: DEV_GUIDE-STEP_1.md  DEV_GUIDE-STEP_10.md  DEV_GUIDE-STEP_11.md  DEV_GUIDE-STEP_12.md  (+15 more)
(+1239 files in other folders)
