[project]
name = "remora"
version = "0.1.0"
description = "Local code analysis and enhancement with FunctionGemma subagents."
readme = "docs/CONCEPT.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" },
]

dependencies = [
  "typer>=0.12",
  "rich>=13",
  "pydantic>=2",
  "pyyaml>=6",
  "jinja2>=3",
  "watchfiles>=0.21",
  "openai>=1.0",
  "cairn",
  "pydantree",
  # pydantree and cairn added as local or VCS dependencies
]

[tool.uv.sources]
fsdantic = { git = "https://github.com/Bullish-Design/fsdantic.git" }
grail = { git = "https://github.com/Bullish-Design/grail.git" }
cairn = { git = "https://github.com/Bullish-Design/cairn.git" }
pydantree = { git = "https://github.com/Bullish-Design/pydantree.git" }

[project.scripts]
remora = "remora.cli:app"
remora-tui = "scripts.remora_tui:app"
remora-demo = "scripts.remora_demo:app"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "mypy>=1.10",
  "ruff>=0.5.0",
]

#[project.urls]
#homepage = "https://github.com/Bullish-Design/template-py"
#repository = "https://github.com/Bullish-Design/template-py.git"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["remora", "scripts"]

[tool.hatch.build.targets.sdist]
include = [
  "remora",
  "agents",
  "training",
  "docs",
  "scripts",
  "CONTRIBUTING.md",
  "pyproject.toml",
]

[tool.uv]
prerelease = "allow"
# Keep the default behavior; this section is here so you can extend it later if needed.

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --cov=remora --cov-report=term-missing -m \"not integration\""
testpaths = ["tests"]
markers = ["integration: requires vLLM FunctionGemma server"]

[tool.mypy]
python_version = "3.13"
packages = ["remora"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
no_implicit_optional = true

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["remora"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
